[fix] create task support multiple files ,assignee and reviewers.
 Swap to sets for backend,keep list only at controller receiving files, also new entities and refactor of all related classes/methods to achieve it.